[project]
name = "final_dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "javolmer", email = "jasper.volmer@mci.edu"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
